2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Report warning when from X import * imports symbols that
	  get shadowed by later class definitions.
	  In _BUILD_CLASS, looks to me like we should push the name
	  on the stack, not the dict.
	* pychecker/msgs.py:
	  Add the error message.
	* pychecker/pcmodules.py:
	  Track where imports happen in imported instance variable.
	  Add addImported method.
	* test_todo/import44.py (deleted):
	* test_todo/test44.py (deleted):
	* test_input/import44.py:
	* test_input/test44.py:
	* test_expected/test44:
	  Since the code now gives a useful hint about what's wrong in this
	  test (a class definition shadowing an import through *), put this
	  test back in the test suite

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Track the aliased name of a global reference, so we track
	  path when we do from os import path
	* pychecker/pcmodules.py:
	  Track aliases in Code.modules keys, instead of fully qualified
	  names.
	  Add a codes list member to Code, to analyze Code objects in
	  unit tests for debugging.
	* pychecker/warn.py:
	  Add to PyCheckerModule.codes.
	* test/test_internal.py:
	  Replace the fully qualified module names with the aliases used in
	  the code.
	* test/test_unused.py:
	  With this change, we now catch the unused import of
	  from os import path.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Extract a method to handle deprecated modules being imported.
	  Add a helper to get a pcmodule for a given name so we can
	  put it on the stack.
	  Put the actual PyCheckerModule on the stack if we can find it.
	  This will allow us to properly get attributes later on.
	* pychecker/pcmodules.py:
	  Allow errors during import to go through, so we can detect when
	  something is not really a module.
	* pychecker/Stack.py:
	  Add a wishlist note.